src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_XmlLangOnUnknownTag.xaml
<!--
/*******************************************************************
 * Purpose: xml:lang on unknown tag (undefined type).
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_XmlLangOnUnknownTag.xaml $
********************************************************************/
-->
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
    <foo xml:lang="en-us" />
</Page>
